@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.program.yt-setup" name="Youtube Setup" version="2.0.0" provider-name="Twilight0">
+<addon id="plugin.program.yt-setup" name="Youtube Setup" version="2.0.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
-        <import addon="plugin.video.youtube" version="5.4.0"/>
+        <import addon="plugin.video.youtube" version="6.6.0"/>
         <import addon="script.module.tulip" version="2.5.10"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
@@ -24,7 +24,12 @@
         <license>GNU GPL, version 2</license>
         <website>https://twitter.com/TwilightZer0</website>
         <source>https://github.com/Twilight0/plugin.program.yt-setup</source>
-        <news>[B]+ 2.0.0[/B] ~ (06-04-2020)
+        <news>[B]+ 2.0.1[/B] ~ (22-04-2020)
+- Added the following translations:
+  > German: thanks to horstle
+  > Spanish: thanks to roliverosc
+
+[B]+ 2.0.0[/B] ~ (06-04-2020)
 - Proper Python 3 support
 - Added support for hastebin.com
 - Simplified setup function
