@@ -1,3 +1,8 @@
+[B]+ 2.0.1[/B] ~ (22-04-2020)
+- Added the following translations:
+  > German: thanks to horstle
+  > Spanish: thanks to roliverosc
+
 [B]+ 2.0.0[/B] ~ (06-04-2020)
 - Proper Python 3 support
 - Added support for hastebin.com
